# big-spam-eater

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml  rust.yml
deployment/gcp/: README.md  iam.tf  locals.tf  network.tf  outputs.tf  provider.tf  remote_state.tf  secrets.tf  variables.tf  vm.tf
prompts/: create_roadmap_for_user.txt  detect_roadmap.txt  request.txt  spam_role.txt  verify.txt
src/: ask.rs  chunking.rs  clean_messages.rs  consts.rs  main.rs  messaging.rs  request.rs  roadmaps.rs  spam_detection.rs  user_info.rs  utilities.rs
