[package]
name = "spam_blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serenity = { version="0.11.5", default-features = false, features = ["client", "gateway", "time", "rustls_backend", "model"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.24"
dotenv = "0.15.0"
