[package]
name = "spam_blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.85"
serenity = { version="0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"] }
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
dotenv = "0.15.0"
openai = "1.0.0-alpha.15"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
config = "0.14.0"
serde_json = "1.0.120"
regex = "1.10.5"
log = "0.4.22"
